# TCC-Autonomous-Ship

./: .gitignore  README.md  mainws.bat  project_requirements.txt  ros2dev.bat  ros2main.bat  surge_controller.py
for_conda_env/: setup.bat
helpers/: client.bat  configpublic.bat  overlay.bat  path.bat  pydyna.bat  start.json  vsbuildall.bat
helpers/payloads/: comments.md  initialCondition.json  waypoints.json  waypointsHexagon.json  waypointsLinear.json  waypointsS.json  waypointsSantos.json  waypointsZigZag.json  waypointscurve.json
helpers/rosbag2_2021_11_15-03_03_40/: metadata.yaml  rosbag2_2021_11_15-03_03_40_0.db3
notes/: 30runs.yaml  cmd_notes.txt  codigoreserva.txt  finalresults.yaml  getting_started.md  learn_launch.py  priorities.md  results.yaml  ros1pubsub.txt  ros2_notes.txt  tests_checklist.md
notes/pydyna docs/site/: 404.html  index.html  search.html
notes/pydyna docs/site/API/: index.html
notes/ros2_notes/: ros2_notes.txt  tests_checklist.md
scripts/: client.bat  pydyna.bat  start.json.txt  vsbuildall.bat  waypoints.json  waypoints.json.txt
src/: .gitignore  main.py  ros2_project_commands.txt
src/experiments/dev_ws/install/: local_setup.bat  local_setup.ps1  setup.bat  setup.ps1
src/experiments/dev_ws/log/: latest_build
src/experiments/notch-filter/: parameters.py
src/experiments/py_pubsub/: setup.py
src/experiments/surge-control/: __main__.py  main.py
src/experiments/surge-control/modules/: simulation.py
src/experiments/surge-control/simplified_model/: control.mlx  step_response.mlx
src/experiments/yaw-control/config/: TankerL186B32_T085.p3d  pydyna-7.2.3-py3-none-any.whl
src/experiments/yaw-control/modules/: simulation.py
src/main_ws/src/i_am_rosbag_dir/: i_am_rosbag_dir_0.db3  metadata.yaml
src/main_ws/src/install/: local_setup.bat  local_setup.ps1  setup.bat  setup.ps1
src/main_ws/src/path_following/: package.xml  setup.cfg  setup.py
src/main_ws/src/path_following/launch/: path_following.launch.py
src/main_ws/src/path_following/path_following/: backend.py  control_allocation.py  gps_imu_simul.py  kalman_filter.py  los_guidance.py  surge_controller.py  surgecontrol.py  venus.py  wave_filter.py  yaw_controller.py
src/main_ws/src/path_following_interfaces/: CMakeLists.txt  package.xml
src/main_ws/src/pydyna_simple/: package.xml  setup.cfg  setup.py
src/main_ws/src/pydyna_simple/config/: NoCurrent&Wind_TankerL186B32_T085.p3d  NoWaves&Current&Wind_TankerL186B32_T085.p3d  NoWaves_TankerL186B32_T085.p3d  TankerL186B32_T085.p3d  changes.txt
src/main_ws/src/pydyna_simple/config/docs/pydyna_doc/doc/site/: sitemap.xml
src/main_ws/src/pydyna_simple/config/docs/pydyna_doc/doc/site/search/: search_index.json
src/main_ws/src/pydyna_simple/launch/: pydyna_simple.launch.py
src/main_ws/src/pydyna_simple/launch/rosbag2_2021_09_19-21_34_45/: metadata.yaml  rosbag2_2021_09_19-21_34_45_0.db3
src/main_ws/src/pydyna_simple/pydyna_simple/: pydyna_simple.py
src/modules/: simulation.py
src/surge-control-project/: .gitignore  README.md  main.py
src/surge-control-project/modules/: simulation.py
src/surge-control/modules/: simulation.py
src/surge-control/simplified_model/: control.mlx
(+205 files in other folders)
