<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_following</name>
  <version>0.0.0</version>
  <description>Path-Following Ship</description>
  <maintainer email="bruno.c.scaglione@gmail.com">bruno</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>flask</exec_depend>
  <exec_depend>os</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>json</exec_depend>
  <exec_depend>datetime</exec_depend>
  <exec_depend>venus</exec_depend>
  <exec_depend>sympy</exec_depend>

  <depend>path_following_interfaces</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
